--- a/renas_code/css/application-style.css
+++ b/renas_code/css/application-style.css
@@ -570,7 +570,7 @@ footer{
 }
 .cb-container{
 	text-align: left;
-	width: 54%;
+	width: 58%;
 	float: right;
 	
 }
